--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "node-sass": "^6.0.1",
+    "raw-loader": "^4.0.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.50.0",
