--- a/spring-boot-ecommerce/src/main/resources/application.properties
+++ b/spring-boot-ecommerce/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8085
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/motoshop_database?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://s154.cyber-folks.pl:3306/usasklep_motoshop?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=usasklep_user
+spring.datasource.password=""
+
