add firebase image storage

--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
   },
   "msw": {
     "workerDirectory": "dist"
+  },
+  "dependencies": {
+    "firebase": "^9.1.2",
+    "uuid": "^8.3.2"
   }
 }
